@@ -1029,6 +1029,32 @@ Ztring& Ztring::Date_From_Seconds_1970 (const int32u Value)
     return *this;
 }
 
+Ztring& Ztring::Date_From_Seconds_1970_Local (const int32u Value)
+{
+    time_t Time=(time_t)Value;
+    struct tm *Gmt=localtime(&Time);
+    Ztring DateT;
+    Ztring Date;
+    Date+=Ztring::ToZtring((Gmt->tm_year+1900));
+    Date+=_T("-");
+    DateT.From_Number(Gmt->tm_mon+1); if (DateT.size()<2){DateT=Ztring(_T("0"))+Ztring::ToZtring(Gmt->tm_mon+1);}
+    Date+=DateT;
+    Date+=_T("-");
+    DateT.From_Number(Gmt->tm_mday); if (DateT.size()<2){DateT=Ztring(_T("0"))+Ztring::ToZtring(Gmt->tm_mday);}
+    Date+=DateT;
+    Date+=_T(" ");
+    DateT.From_Number(Gmt->tm_hour); if (DateT.size()<2){DateT=Ztring(_T("0"))+Ztring::ToZtring(Gmt->tm_hour);}
+    Date+=DateT;
+    Date+=_T(":");
+    DateT=Ztring::ToZtring(Gmt->tm_min); if (DateT.size()<2){DateT=Ztring(_T("0"))+Ztring::ToZtring(Gmt->tm_min);}
+    Date+=DateT;
+    Date+=_T(":");
+    DateT.From_Number(Gmt->tm_sec); if (DateT.size()<2){DateT=Ztring(_T("0"))+Ztring::ToZtring(Gmt->tm_sec);}
+    Date+=DateT;
+    assign (Date.c_str());
+    return *this;
+}
+
 Ztring& Ztring::Date_From_String (const char* Value, size_t Value_Size)
 {
     //Only the year
